--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,35 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
-
+commands:
+  get-job-status-message:
+    parameters:
+      exit_code:
+        type: string
+      job_name:
+        type: string
+    steps:
+      - run: |
+          if [ $parameters.exit_code] eq "0" ]; then
+            MESSAGE="$parameters.job_name passed!
+          else
+            MESSAGE="$parameters.job_name failed."
+          fi
+          echo "export JOB_MESSAGE=$MESSAGE" >> $BASH_ENV
+  post-gh-pr-comment:
+    parameters:
+      message:
+        type: string
+        default: "someone forgot to leave a message"
+    steps:
+      - run: |
+          PR_NUMBER=pipeline.event.github.pull_request.number
+          
+          curl -H "Authorization: token $GITHUB_TOKEN" \
+          -X POST \
+          -d '{"body": "$parameters.message"}' \
+          "https://api.github.com/repos/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/issues/$PR_NUMBER/comments"
+        
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
@@ -16,7 +44,7 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
-  build-and-test:
+  build:
     macos:
       xcode: "16.4.0"
     # Add steps to the job
@@ -26,10 +54,22 @@ jobs:
       - checkout
       - run:
           name: "build iOS app"
-          command: xcodebuild -scheme fiveplus2025 -destination 'platform=iOS Simulator,name=iPhone 16'
+          command: |
+            xcodebuild -scheme fiveplus2025 -destination 'platform=iOS Simulator,name=iPhone 16'
+            BUILD_STATUS=$?
+            echo "export BUILD_STATUS=$BUILD_STATUS" >> $BASH_ENV
+      - get-job-status-message:
+          exit_code: $BUILD_STATUS
+          job_name: "Build"
+      - post-gh-pr-comment:
+          message: $JOB_MESSAGE
       - run:
           name: "test iOS app"
-          command: xcodebuild test -scheme fiveplus2025 -destination 'platform=iOS Simulator,name=iPhone 16'
+          command: |
+            xcodebuild test -scheme fiveplus2025 -destination 'platform=iOS Simulator,name=iPhone 16'
+            TEST_STATUS=$?
+            echo "export TEST_STATUS=$TEST_STATUS" >> $BASH_ENV
+          
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
@@ -38,4 +78,4 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - say-hello
-      - build-and-test
+      - build
