--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,6 @@ commands:
         type: string
     steps:
       - run: |
-          echo "REPOSITORY: << pipeline.event.github.repository >>"
           echo "EXIT CODE:<< parameters.exit_code >>\nJOB NAME:<< parameters.job_name >>"
           if [ "<< parameters.exit_code >>" = "0" ]; then
             MESSAGE="<< parameters.job_name >> passed!"
@@ -42,7 +41,7 @@ commands:
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
+  set-up:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
     docker:
@@ -50,9 +49,13 @@ jobs:
       # See: https://circleci.com/developer/images/image/cimg/base
       - image: cimg/base:current
     steps:
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+      - checkout
+      - run: |
+          REPO_NAME=$(basename -s .git `git config --get remote.origin.url`)
+          echo "export REPO_NAME=$REPO_NAME" >> $BASH_ENV
+
+          GH_OWNER=$(basename $(dirname $(git config --get remote.origin.url)))
+          echo "export GH_OWNER=$GH_OWNER" >> $BASH_ENV
   build:
     macos:
       xcode: "16.4.0"
@@ -86,5 +89,5 @@ workflows:
   say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - say-hello
+      - set-up
       - build
