--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,17 @@
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
 commands:
+  set-up:
+    description: "Sets up any environment variables that we need"
+    steps:
+      - run: |
+          REPO_NAME=$(basename -s .git `git config --get remote.origin.url`)
+          echo "export REPO_NAME=$REPO_NAME" >> $BASH_ENV
+
+          GH_OWNER=$(basename $(dirname $(git config --get remote.origin.url)))
+          echo "export GH_OWNER=$GH_OWNER" >> $BASH_ENV
   get-job-status-message:
+    description: "Get's the status message of a job"
     parameters:
       exit_code:
         type: string
@@ -21,6 +31,7 @@ commands:
           echo "\nMESSAGE: $MESSAGE"
           echo "\nBASH ENV: $BASH_ENV"
   post-gh-pr-comment:
+    description: "Posts the given message as a comment to the upstream GH PR"
     parameters:
       message:
         type: string
@@ -41,7 +52,7 @@ commands:
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  set-up:
+  say-hello:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
     docker:
@@ -49,21 +60,16 @@ jobs:
       # See: https://circleci.com/developer/images/image/cimg/base
       - image: cimg/base:current
     steps:
-      - checkout
       - run: |
-          REPO_NAME=$(basename -s .git `git config --get remote.origin.url`)
-          echo "export REPO_NAME=$REPO_NAME" >> $BASH_ENV
-
-          GH_OWNER=$(basename $(dirname $(git config --get remote.origin.url)))
-          echo "export GH_OWNER=$GH_OWNER" >> $BASH_ENV
+          echo "Hello World!"
   build:
     macos:
       xcode: "16.4.0"
     # Add steps to the job
     # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
     steps:
-      # Checkout the code as the first step.
       - checkout
+      - set-up
       - run:
           name: "build iOS app"
           command: |
@@ -89,5 +95,4 @@ workflows:
   say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - set-up
       - build
